# ApiHunter

./: .dockerignore  .gitignore  APIHUNTER_IMPROVEMENTS.md  CHANGELOG.md  CI_CD_ANALYSIS.md  CONTRIBUTING.md  Cargo.toml  Changelog.md  Changlog.md  Dockerfile  HOWTO.md  Makefile  README.md  Readme.md  SECURITY.md  STEALTH_ASSESSMENT.md  STEALTH_IMPROVEMENTS.md  cargo.toml  critical_findings_validation.md  extract_one_high.py  test-targets.txt  test_targets.txt  test_urls.txt
.github/: CODEOWNERS
.history/: HOWTO_20260314032710.md  cargo_20260314024814.toml  cargo_20260314031309.toml  cargo_20260314031314.toml  cargo_20260314032111.toml  cargo_20260314032124.toml  cargo_20260314032211.toml
.trunk/: trunk.yaml
ScanScripts/: _scan_common.sh  authscan.sh  baselinescan.sh  deepscan.sh  defaultscan.sh  diffscan.sh  inaccessiblescan.sh  quickscan.sh  sarifscan.sh  scan-and-report.sh  split-by-host.sh
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
assets/: cve_templates.toml  jwt_secrets.txt  user_agents.txt
docs/: INDEX.md  architecture.md  auth-flow.md  configuration.md  deep-review-checklist.md  desktop.md  findings.md  lab-setup.md  operations.md  scanners.md  testing.md
src/: auth.rs  auto_report.rs  cli.rs  config.rs  error.rs  http_client.rs  lib.rs  main.rs  progress_tracker.rs  reports.rs  runner.rs  waf.rs
targets/: cve-regression-real-public.txt  cve-regression-vulhub-local.txt  gambling-sites.txt  real-world-integration-public.txt  vuln-api-regression-public-candidates-10.txt  vuln-api-regression-real-public.txt
tasks/: lessons.md  todo.md
tests/: api_security_scanner.rs  api_versioning_scanner.rs  auth_flow.rs  auth_refresh.rs  burst_probe.rs  cli.rs  cors_scanner.rs  cve_templates_real_data.rs  cve_templates_runtime_ext.rs  cve_templates_scanner.rs  cve_templates_upstream_parity.rs  graphql_scanner.rs  grpc_protobuf_scanner.rs  http_client_retry_policy.rs  http_client_unauth.rs  idor_scanner.rs  (+16 more)
(+249 files in other folders)
