[package]
name = "apihunter"
version = "0.1.0"
edition = "2021"
default-run = "api-scanner"

[lib]
name = "api_scanner"
path = "src/lib.rs"

[[bin]]
name = "apihunter"
path = "src/main.rs"

[[bin]]
name = "api-scanner"
path = "src/bin/api-scanner.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "gzip", "deflate", "rustls-tls", "cookies", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"

# Regex
regex = "1"
once_cell = "1"

# URL parsing
url = "2"

# JSONPath extraction for auth flows
jsonpath-rust = "0.3"

# Random
rand = "0.8"

# Async utilities
futures = "0.3"
tokio-util = { version = "0.7", features = ["full"] }
async-trait = "0.1"

# Error handling
thiserror = "1"
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"

# Concurrency primitives
dashmap = "5"
arc-swap = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd    = "2"
predicates    = "3"
wiremock      = "0.6"
assert_matches = "1"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
