[package]
name = "apihunter-desktop"
version = "0.3.0"
description = "ApiHunter desktop shell"
authors = ["ApiHunter contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
api_scanner = { package = "apihunter", path = "../../../" }
base64 = "0.22"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["sync"] }
url = "2"
